# Assignments_SDAIA_course

./: .gitignore  main.py  pyproject.toml  pyvenv.cfg
Assignment_2/: Assignment_2.ipynb  main.py
Assignment_3/: Assignment_3.ipynb  main.py
Assignment_4/: Assignment_4.ipynb  main.py
Assignment_5/: Assignment_5.ipynb  main.py  utils.py
